--- a/projects/project-1-oxa.json
+++ b/projects/project-1-oxa.json
@@ -4,7 +4,7 @@
     "year": 2023,
     "description": "A computationally driven bridge network through modular design, geometry rationalization, and seamless BIM interoperability @Grimshaw",
     "timestamp": "Oct '23",
-    "previewImage": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_800,f_auto,q_auto/v1761920974/OXA_04_SINE_qecq8k.gif",
+    "previewImage": "https://res.cloudinary.com/dnahwqvhd/image/upload/v1761920974/OXA_04_SINE_qecq8k.gif",
     "content": {
         "paragraphs": [
             "",
@@ -21,7 +21,7 @@
             },
             {
                 "type": "image",
-                "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1761922158/202_02-42-39-2708_eaitsh.png",
+                "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/v1761922158/202_02-42-39-2708_eaitsh.png",
                 "caption": "Optional caption describing this image",
                 "position": "after-paragraph-1"
             },
