--- a/projects/project-15-masjidnabawy.json
+++ b/projects/project-15-masjidnabawy.json
@@ -4,7 +4,7 @@
     "year": 2019,
     "description": "Parametric Documentation of Al‑Masjid Al‑Nabawi-Tracing Architectural Evolution Through Advanced Geometry Modeling @UDAAR",
     "timestamp": "August '19",
-    "previewImage": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_800,f_auto,q_auto/v1762043523/image_33_s7wgly.png",
+    "previewImage": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762043531/14_-%D9%82%D8%B7%D8%A7%D8%B9_%D9%85%D9%86%D8%B8%D9%88%D8%B1%D9%8A_%D9%84%D9%84%D9%85%D8%B3%D8%AC%D8%AF_tgfjls.jpg",
     "content": {
         "paragraphs": [
             "",
