--- a/projects/project-3-acropora.json
+++ b/projects/project-3-acropora.json
@@ -28,7 +28,7 @@
             },
             {
                 "type": "gif",
-                "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1761937617/it02a-1_umdzb1.gif",
+                "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/v1761937617/it02a-1_umdzb1.gif",
                 "caption": "Optional caption",
                 "position": "after-paragraph-2"
             },
