--- a/projects/project-3-acropora.json
+++ b/projects/project-3-acropora.json
@@ -2,7 +2,7 @@
     "id": 3,
     "title": "Acropora",
     "year": 2020,
-    "description": "Defferential growth and particles system simulation @IAAC",
+    "description": "Differential growth and particles system simulation @IAAC",
     "timestamp": "Nov '20",
     "previewImage": "https://res.cloudinary.com/dnahwqvhd/video/upload/w_800,f_auto,q_auto/v1761938536/growth_wtk9xz.mp4",
     "content": {
