--- a/projects/project-8-urbanfarming.json
+++ b/projects/project-8-urbanfarming.json
@@ -4,7 +4,7 @@
     "year": 2021,
     "description": "Urban farming, food production analysis, urban data @IAAC",
     "timestamp": "Dec '21",
-    "previewImage": "https://res.cloudinary.com/dnahwqvhd/video/upload/w_800,f_auto,q_auto/v1761956463/V-01_nhq3sh.mp4",
+    "previewImage": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1761956471/Slide118_n0rj4j.png",
     "content": {
         "paragraphs": [
             "",
