--- a/projects/project-22-naja.json
+++ b/projects/project-22-naja.json
@@ -16,43 +16,43 @@
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762089545/d5484b149433283.62e7c72986858_oc2csf.jpg",
-                "caption": "Optional caption",
+                "caption": "Street-level view of the mosque",
                 "position": "after-paragraph-0"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762089545/form-finding_il9kkr.png",
-                "caption": "Optional caption",
+                "caption": "Form-finding diagram",
                 "position": "after-paragraph-0"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762089545/de9328149433283.62e7c728e5837_gthiug.png",
-                "caption": "Optional caption",
+                "caption": "3D model of the roof tessellation study",
                 "position": "after-paragraph-1"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762089545/7864a1149433283.62e7c729873d4_q5e5mi.jpg",
-                "caption": "Optional caption",
+                "caption": "Partial side elevation",
                 "position": "after-paragraph-2"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762089545/roof_04_v7duqp.png",
-                "caption": "Optional caption",
+                "caption": "Detail line roof tiling system",
                 "position": "after-paragraph-3"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762090090/a67bec149433283.62e7c728e46fe_gdddtu.jpg",
-                "caption": "Optional caption",
+                "caption": "Exploded diagram illustrating the various elements of the mosque",
                 "position": "after-paragraph-3"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762089545/c0a0ae149433283.62e7c7298866e_xwtnpp.jpg",
-                "caption": "Optional caption",
+                "caption": "Interior view highlighting the dramatic effect of the roof slits",
                 "position": "end"
             }
         ]
