--- a/projects/project-12-thukher.json
+++ b/projects/project-12-thukher.json
@@ -16,49 +16,49 @@
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762036691/image96_kflzuf.jpg",
-                "caption": "Optional caption",
+                "caption": "Diagram illustrating the tessellation tiling logic underlying the envelope’s skin system",
                 "position": "after-paragraph-0"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762036191/image_24_l2t1fy.png",
-                "caption": "Optional caption",
+                "caption": "Street‑level illustration depicting the project within its urban context",
                 "position": "after-paragraph-1"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762036859/2025-11-01_22_38_40-EUR-HDI-205_Hesham.Shawqy_grimshaw.global_bzsdar.png",
-                "caption": "Optional caption",
+                "caption": "Detailed 3D diagrams illustrating the structural framework and fixation member details",
                 "position": "after-paragraph-2"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762036179/image101_cirnfs.jpg",
-                "caption": "Optional caption",
+                "caption": "Layout illustrating the structural framework and fixation member details",
                 "position": "after-paragraph-2"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762036203/image99_oagtc7.png",
-                "caption": "Optional caption",
+                "caption": "Close‑up illustration highlighting the fixation system",
                 "position": "after-paragraph-3"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762036860/2025-11-01_22_39_02-EUR-HDI-205_Hesham.Shawqy_grimshaw.global_feetwn.png",
-                "caption": "Optional caption",
+                "caption": "3D diagrams illustrating the roof layers with emphasis on the fixation system",
                 "position": "after-paragraph-3"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762037690/1.37.1_1.37.1_djbdob.jpg",
-                "caption": "Optional caption",
+                "caption": "Aerial view illustration depicting the completed project within its urban context @GoogleEarth",
                 "position": "after-paragraph-3"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762036193/image_26_c7uzm6.png",
-                "caption": "Optional caption",
+                "caption": "Aerial view illustration",
                 "position": "end"
             }
         ]
