--- a/projects/project-13-acpbridge.json
+++ b/projects/project-13-acpbridge.json
@@ -16,43 +16,43 @@
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762039990/image_29_wut5u1.png",
-                "caption": "Optional caption",
+                "caption": "Street‑level perspective of the bridge within its urban context",
                 "position": "after-paragraph-0"
             },
             {
                 "type": "video",
                 "src": "https://res.cloudinary.com/dnahwqvhd/video/upload/w_1200,f_auto,q_auto/v1762039939/V-01_tbxl78.mp4",
-                "caption": "Optional caption",
+                "caption": "Exploded view of the bridge’s structural elements with detailed panelization",
                 "position": "after-paragraph-0"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762039979/image108_f1fokf.jpg",
-                "caption": "Optional caption",
+                "caption": "Diagram illustrating the panelization outcome with dimensioning annotations",
                 "position": "after-paragraph-1"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762039996/image110_bdmawx.png",
-                "caption": "Optional caption",
+                "caption": "Soffit panelization with detailed structural specifications of the panels",
                 "position": "after-paragraph-2"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762039984/image109_ktuihb.png",
-                "caption": "Optional caption",
+                "caption": "Soffit panelization with detailed structural specifications of the panels",
                 "position": "after-paragraph-2"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762040705/2025-11-01_23_42_30-EUR-HDI-205_Hesham.Shawqy_grimshaw.global_bbyijx.png",
-                "caption": "Optional caption",
+                "caption": "Initial fabrication drawings documentation for the panels",
                 "position": "after-paragraph-3"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762039992/image_28_zi9oxo.png",
-                "caption": "Optional caption",
+                "caption": "Aerial view of the bridge within its urban context",
                 "position": "end"
             }
         ]
