--- a/projects/project-16-kidspavilion.json
+++ b/projects/project-16-kidspavilion.json
@@ -16,37 +16,37 @@
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762048375/image_43_d9rspm.png",
-                "caption": "Optional caption",
+                "caption": "Aerial AI rendering generated from the physical model input image",
                 "position": "after-paragraph-0"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762048368/image_51_yxeoir.png",
-                "caption": "Optional caption",
+                "caption": "Physical model featuring slime double-curved ribbons and interconnected cubes",
                 "position": "after-paragraph-0"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762048359/image_49_wdfvwd.png",
-                "caption": "Optional caption",
+                "caption": "Study of elevational views",
                 "position": "after-paragraph-1"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762048372/image_53_lfpwx2.png",
-                "caption": "Optional caption",
+                "caption": "Render view - AI02",
                 "position": "after-paragraph-2"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762048365/image_52_mf88k5.png",
-                "caption": "Optional caption",
+                "caption": "Render view - AI03",
                 "position": "after-paragraph-2"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762048583/image_44_a07bb6.png",
-                "caption": "Optional caption",
+                "caption": "Side elevation",
                 "position": "end"
             }
         ]
