--- a/projects/project-17-sciencecity.json
+++ b/projects/project-17-sciencecity.json
@@ -16,43 +16,43 @@
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762051017/06-NIGHT_shot_qamppc.jpg",
-                "caption": "Optional caption",
+                "caption": "Aerial rendered view of the library proposal",
                 "position": "after-paragraph-0"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762051017/15-Form_Generation_cj1m6d.jpg",
-                "caption": "Optional caption",
+                "caption": "Form-finding of peeling forces",
                 "position": "after-paragraph-0"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762051017/20-Elements_slmzq7.jpg",
-                "caption": "Optional caption",
+                "caption": "3D zoning diagram",
                 "position": "after-paragraph-1"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762051017/16-Sequentional_Sections_woxdhy.jpg",
-                "caption": "Optional caption",
+                "caption": "Sequential 3D section diagram",
                 "position": "after-paragraph-2"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762051017/18-Environmental_lyc3qe.png",
-                "caption": "Optional caption",
+                "caption": "Multi-layered skin system logic and its lighting performance",
                 "position": "after-paragraph-3"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762051017/17-Pattern_2_oi5lar.jpg",
-                "caption": "Optional caption",
+                "caption": "Multi-layered skin system logic and its lighting performance",
                 "position": "after-paragraph-3"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762051572/image_54_r1l2ho.png",
-                "caption": "Optional caption",
+                "caption": "Aerial rendered view",
                 "position": "end"
             }
         ]
