--- a/projects/project-18-sportscentre.json
+++ b/projects/project-18-sportscentre.json
@@ -16,37 +16,37 @@
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762052429/05_ksafis.jpg",
-                "caption": "Optional caption",
+                "caption": "Aerial render view of the stadium",
                 "position": "after-paragraph-0"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762052429/06_olrcvk.jpg",
-                "caption": "Optional caption",
+                "caption": "Form finding and massing layers",
                 "position": "after-paragraph-0"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762052429/VIEWS_xsmytz.png",
-                "caption": "Optional caption",
+                "caption": "Gallery of project views",
                 "position": "after-paragraph-1"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762052429/SPORTS_TEMPLATE_005_i9icks.jpg",
-                "caption": "Optional caption",
+                "caption": "Side elevation",
                 "position": "after-paragraph-2"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762052835/01_tpyssr.jpg",
-                "caption": "Optional caption",
+                "caption": "Longitudinal section",
                 "position": "after-paragraph-3"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762052429/image_55_itgv58.png",
-                "caption": "Optional caption",
+                "caption": "Aerial render view",
                 "position": "end"
             }
         ]
