--- a/projects/project-19-fairytale.json
+++ b/projects/project-19-fairytale.json
@@ -17,31 +17,31 @@
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762081101/Scene_01_gleijh.png",
-                "caption": "Optional caption",
+                "caption": "Chapter 01",
                 "position": "after-paragraph-0"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762081100/Scene_02_mqvroo.png",
-                "caption": "Optional caption",
+                "caption": "Chapter 02",
                 "position": "after-paragraph-1"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762081100/Scene_03_jq32hm.png",
-                "caption": "Optional caption",
+                "caption": "Chapter 03",
                 "position": "after-paragraph-2"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762081101/Scene_04_v3ut4e.png",
-                "caption": "Optional caption",
+                "caption": "Chapter 04",
                 "position": "after-paragraph-3"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762081100/Scene_05_xlb3kf.png",
-                "caption": "Optional caption",
+                "caption": "Chapter 05",
                 "position": "end"
             }
         ]
