--- a/projects/project-21-istiqama.json
+++ b/projects/project-21-istiqama.json
@@ -16,43 +16,43 @@
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762087318/Board_15_zyrgne.jpg",
-                "caption": "Optional caption",
+                "caption": "3D render of the mosque’s exterior",
                 "position": "after-paragraph-0"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762087317/diagram-01_dvy6d6.png",
-                "caption": "Optional caption",
+                "caption": "Tessellation tiling form-finding logic",
                 "position": "after-paragraph-0"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762087319/diagram-02_u1k1tq.png",
-                "caption": "Optional caption",
+                "caption": "Diagram illustrating the various dynamic systems of the roof and walls",
                 "position": "after-paragraph-1"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762087317/03_nn6buy.jpg",
-                "caption": "Optional caption",
+                "caption": "Interior render",
                 "position": "after-paragraph-2"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762087316/04_qaqvlv.jpg",
-                "caption": "Optional caption",
+                "caption": "Exploded diagram",
                 "position": "after-paragraph-2"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762087319/Board_10_vasnsv.jpg",
-                "caption": "Optional caption",
+                "caption": "3D partial section showing different spatial moments",
                 "position": "after-paragraph-3"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762087522/Board_02_m7tuna.png",
-                "caption": "Optional caption",
+                "caption": "Render view",
                 "position": "end"
             }
         ]
