--- a/projects/project-5-cloud.json
+++ b/projects/project-5-cloud.json
@@ -14,13 +14,13 @@
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1761946194/image214_ugj6na.jpg",
-                "caption": "Optional caption",
+                "caption": "Screenshot of the web configurator user interface",
                 "position": "after-paragraph-0"
             },
             {
                 "type": "video",
                 "src": "https://res.cloudinary.com/dnahwqvhd/video/upload/w_1200,f_auto,q_auto/v1761946199/Configs_avfzih.mp4",
-                "caption": "Optional caption",
+                "caption": "Video demonstrating the user experience of the web-based parametric configurator",
                 "position": "after-paragraph-1"
             }
         ]
