--- a/projects/project-6-widok.json
+++ b/projects/project-6-widok.json
@@ -18,67 +18,67 @@
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1761949451/image_u3ju4h.png",
-                "caption": "Optional caption",
+                "caption": "Human-eye street view of the elevated platform towers",
                 "position": "after-paragraph-0"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1761949613/2025-10-31_22_26_06-EUR-HDI-205_Hesham.Shawqy_grimshaw.global_p9rfqc.png",
-                "caption": "Optional caption",
+                "caption": "Conceptual diagram illustrating the urban strategy of the project",
                 "position": "after-paragraph-1"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1761949458/2025-10-31_22_06_32-EUR-HDI-205_Hesham.Shawqy_grimshaw.global_yk56gd.png",
-                "caption": "Optional caption",
+                "caption": "Diagram depicting the optimization setup for the towers’ views of the surrounding landmarks",
                 "position": "after-paragraph-2"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1761949461/2025-10-31_22_06_04-EUR-HDI-205_Hesham.Shawqy_grimshaw.global_gpox75.png",
-                "caption": "Optional caption",
+                "caption": "3D massing model of the platforms during the optimization process",
                 "position": "after-paragraph-2"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1761949462/2025-10-31_22_05_34-EUR-HDI-205_Hesham.Shawqy_grimshaw.global_z8ffgh.png",
-                "caption": "Optional caption",
+                "caption": "Multi-objective optimization showcasing the top-performing set of options",
                 "position": "after-paragraph-2"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1761949465/2025-10-31_22_10_09-EUR-HDI-205_Hesham.Shawqy_grimshaw.global_t9nqzl.png",
-                "caption": "Optional caption",
+                "caption": "Environmental performance comparison across different clustering massings",
                 "position": "after-paragraph-3"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1761949467/2025-10-31_22_10_51-EUR-HDI-205_Hesham.Shawqy_grimshaw.global_ponqjy.png",
-                "caption": "Optional caption",
+                "caption": "3D massing variations of the tower platforms",
                 "position": "after-paragraph-3"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1761949456/2025-10-31_22_09_13-EUR-HDI-205_Hesham.Shawqy_grimshaw.global_yawqro.png",
-                "caption": "Optional caption",
+                "caption": "Diagram illustrating the tessellation of the platform’s vertical structures, aligned with the flow analysis curves",
                 "position": "after-paragraph-4"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1761949441/Panels2_xhccqg.jpg",
-                "caption": "Optional caption",
+                "caption": "Sectional view with snapshots at various stages",
                 "position": "after-paragraph-4"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1761949441/Panels_suppst.jpg",
-                "caption": "Optional caption",
+                "caption": "Top view",
                 "position": "after-paragraph-4"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1761949451/image_2_m9wiud.png",
-                "caption": "Optional caption",
+                "caption": "Aerial render view",
                 "position": "after-paragraph-4"
             }
         ]
