--- a/projects/project-8-urbanfarming.json
+++ b/projects/project-8-urbanfarming.json
@@ -19,49 +19,49 @@
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1761956471/Slide118_n0rj4j.png",
-                "caption": "Optional caption",
+                "caption": "Aerial view of a house showcasing a proposed rooftop hydroponic farm",
                 "position": "after-paragraph-0"
             },
             {
                 "type": "video",
                 "src": "https://res.cloudinary.com/dnahwqvhd/video/upload/w_1200,f_auto,q_auto/v1761956463/V-01_nhq3sh.mp4",
-                "caption": "Optional caption",
+                "caption": "Sample of collected buildings displaying the four analysis layers: Volumetric, Environmental, Structural, and Rooftop Farming",
                 "position": "after-paragraph-1"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1761956505/image31_caq84i.png",
-                "caption": "Optional caption",
+                "caption": "Diagram displaying the collected GIS data for Kampala, Uganda",
                 "position": "after-paragraph-2"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1761956486/Slide116_rkkawq.png",
-                "caption": "Optional caption",
+                "caption": "Snapshot of the web platform displaying the Green Index urban analysis, comparing food production and consumption ratios",
                 "position": "after-paragraph-3"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1761956485/Slide115_h3hcem.png",
-                "caption": "Optional caption",
+                "caption": "Study on automated rooftop form generation across different building typologies",
                 "position": "after-paragraph-3"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1761956532/image79_vvfsta.png",
-                "caption": "Optional caption",
+                "caption": "Assessment of rooftop farming potential",
                 "position": "after-paragraph-4"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1761957866/image90_scnv2y.jpg",
-                "caption": "Optional caption",
+                "caption": "Exploded diagram illustrating the structural layers of the rooftop",
                 "position": "after-paragraph-5"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1761956473/image216_x8eema.png",
-                "caption": "Optional caption",
+                "caption": "Aerial view showcasing the implementation of rooftop farming",
                 "position": "after-paragraph-5"
             }
         ]
