--- a/projects/project-9-lanyuang.json
+++ b/projects/project-9-lanyuang.json
@@ -16,49 +16,49 @@
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762027371/image_18_napohn.png",
-                "caption": "Optional caption",
+                "caption": "View from a human-eye perspective within the central courtyard of the LanYuan mixed-use development",
                 "position": "after-paragraph-0"
             },
             {
                 "type": "gif",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/v1762027379/Picture8_gzcg3c.gif",
-                "caption": "Optional caption",
+                "caption": "Analyzing the comfort level of wind speeds within the complex’s courtyard",
                 "position": "after-paragraph-0"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762027364/2025-11-01_19_38_58-EUR-HDI-205_Hesham.Shawqy_grimshaw.global_kmf769.png",
-                "caption": "Optional caption",
+                "caption": "Structural simulation assessing the effects of adding canopy-funneling columns",
                 "position": "after-paragraph-1"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762027356/3D-Section_kb5cby.png",
-                "caption": "Optional caption",
+                "caption": "3D axonometric section illustrating the different layers of the canopy",
                 "position": "after-paragraph-2"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762027370/2025-11-01_19_23_35-EUR-HDI-205_Hesham.Shawqy_grimshaw.global_gz3eoc.png",
-                "caption": "Optional caption",
+                "caption": "Geometry of the skin system panels and the automation of their unrolling",
                 "position": "after-paragraph-3"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762027359/2025-11-01_19_38_48-EUR-HDI-205_Hesham.Shawqy_grimshaw.global_maxbz6.png",
-                "caption": "Optional caption",
+                "caption": "Three projection views of the canopy tessellation",
                 "position": "after-paragraph-3"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762027357/Picture9_jgvipt.jpg",
-                "caption": "Optional caption",
+                "caption": "Top projection views of the canopy tessellation",
                 "position": "after-paragraph-3"
             },
             {
                 "type": "image",
                 "src": "https://res.cloudinary.com/dnahwqvhd/image/upload/w_1200,f_auto,q_auto/v1762027377/image_20_q8mnxf.png",
-                "caption": "Optional caption",
+                "caption": "Human-eye perspective view from the adjacent street",
                 "position": "end"
             }
         ]
